updated search and fixed bug on overflow.

--- a/src/app/components/order-card/order-card.component.scss
+++ b/src/app/components/order-card/order-card.component.scss
@@ -19,6 +19,7 @@
     color: black;
     width: 80%;    
     margin-left: 10%;
+    overflow: scroll;
 }
 
 
